--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8" />
     <title>Resume</title>
+    <style>
+        body{background-color: lightblue;
+        }
+    h1{display: flex;
+    justify-content: center;
+color: darkmagenta;}
+h2{display: block;
+color: crimson;
+}
+
+    </style>
 </head>
 <body>
-    <h1>Joshua Ikulayo</h1> 
-    <img src="./IMG_5428.JPG" height="200" alt="my profile photo  "> 
+   <div><h1>Joshua Ikulayo</h1> 
+   <div class="image"><img src="./IMG_5428.JPG" height="200" alt="my profile photo  "> </div> 
    <p>I am a Full stack engineer, hard working and diligent </p> 
    <hr>
    <h1>Education</h1> 
@@ -24,7 +35,7 @@
     <li>Team Work</li>
     <li>html</li> 
     <li>English</li> 
-    <li>Cascading style sheet</li> 
+    <li> <i>Cascading style sheet</i></li> 
 </ul>
 <h1>AWARDS/CERTIFICATION</h1> 
 <ul>
@@ -35,6 +46,6 @@
     <li> <a href="./hobbies.html">Hobbies</a></li> 
     <li><a href="./contact.html">Contact Me</a></li>
 </ul>
-<footer > C joshua. all rights are Reserved... </footer>
+<footer > &#169 joshua. all rights are Reserved... </footer></div> 
 </body>
 </html>
