--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@ color: darkmagenta;}
 h2{display: block;
 color: crimson;
 }
+.first{display: flex;
+justify-content: center;
+background-color: black;}
 
     </style>
 </head>
 <body>
-   <div><h1>Joshua Ikulayo</h1> 
+   <div><h1 class="first">Joshua Ikulayo</h1> 
    <div class="image"><img src="./IMG_5428.JPG" height="200" alt="my profile photo  "> </div> 
-   <p>I am a Full stack engineer, hard working and diligent </p> 
+   <p>I am a Front-end developer, <i>hard working and diligent</i> Aspiring to be great in the Tech community</p> 
    <hr>
    <h1>Education</h1> 
    <ul>
